[gd_scene load_steps=10 format=3 uid="uid://ckuhayprkbicm"]

[ext_resource type="PackedScene" uid="uid://c0yihg7xfs2w" path="res://Weapons/Turtle/Weapon.tscn" id="1_kuhko"]
[ext_resource type="Texture2D" uid="uid://2qlruqkwn5ce" path="res://Weapons/Turtle/BeamWeapon/Beam-Sheet.png" id="2_omij3"]
[ext_resource type="Script" path="res://Weapons/Turtle/BeamWeapon/BeamWeapon.gd" id="3_dgbf7"]
[ext_resource type="PackedScene" uid="uid://ck5703sajs54d" path="res://Weapons/Turtle/BeamWeapon/LaserBeam/LaserBeam.tscn" id="4_6hgs4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdbw6"]
atlas = ExtResource("2_omij3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my28o"]
atlas = ExtResource("2_omij3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhry3"]
atlas = ExtResource("2_omij3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0xh4"]
atlas = ExtResource("2_omij3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_metnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdbw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my28o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhry3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0xh4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BeamWeapon" instance=ExtResource("1_kuhko")]
sprite_frames = SubResource("SpriteFrames_metnh")
script = ExtResource("3_dgbf7")

[node name="ShootTimer" parent="." index="0"]
wait_time = 2.0
one_shot = true

[node name="LaserBeam2D" parent="." index="1" instance=ExtResource("4_6hgs4")]
position = Vector2(16, 0)

[node name="EndShootTimer" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="timeout" from="EndShootTimer" to="." method="_on_end_shoot_timer_timeout"]
